--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>AEC Geometry Lab — M0</title>
+    <title>AEC Geometry Lab — Milestone 1</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <style>
-      html, body { height:100%; margin:0; }
+      html, body { height:100%; margin:0; font-family: system-ui, sans-serif; }
+      #wrap { display: grid; grid-template-columns: 260px 1fr; height: 100%; }
+      aside { padding:12px; border-right:1px solid #ddd; }
       #gl { width:100%; height:100%; display:block; }
+      label { display:block; font-size:12px; color:#444; margin-bottom:6px; }
     </style>
   </head>
   <body>
-    <canvas id="gl"></canvas>
+    <div id="wrap">
+      <aside>
+        <h3>Shader Uniform</h3>
+        <label>Morph <span id="morphVal">0.00</span></label>
+        <input type="range" id="morph" min="0" max="1" step="0.01" value="0" />
+      </aside>
+      <canvas id="gl"></canvas>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
