feat(view): add wireframe + valence heatmap toggles (Milestone 3)
UI: add Wireframe and Valence heatmap checkboxes to sidebar

Shaders: introduce optional aColor attribute and uUseVertexColor uniform; fallback to grayscale lambert when disabled

WebGL: support per-vertex color VBO and unique line EBO; switch between TRIANGLES and LINES at runtime

Geometry utils: build unique wireframe indices from tris; compute (approx) valences and map to RGB (blue→green→red)

Render loop: bind color buffer conditionally; set uUseVertexColor each frame; preserve resize/viewport behavior

OBJ pipeline: on load, normalize mesh, upload colors/lines, log verts/tris/linePairs

Verify

Load OBJ → toggle Wireframe: crisp edges (no duplicates)

Toggle Valence heatmap: colors reflect vertex valence; uncheck → grayscale lambert

Resize window: aspect remains correct (canvas size + viewport synced)

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <h3>Shader Uniform</h3>
         <label>Morph <span id="morphVal">0.00</span></label>
         <input type="range" id="morph" min="0" max="1" step="0.01" value="0" />
+        <h3>OBJ</h3>
+        <div class="row"><input type="file" id="objFile" accept=".obj" /></div>
+        <h3>View</h3>
+        <label><input type="checkbox" id="wire" /> Wireframe (lines)</label>
+        <label><input type="checkbox" id="valence" /> Valence heatmap (per-vertex color)</label>
       </aside>
       <canvas id="gl"></canvas>
     </div>
