feat(geom): Milestone 4 — interactive edge picking + edgeFlip/edgeSplit
Add off-screen color-ID picking FBO to select edges by click (picking.ts)

Build unique edge pairs from triangles and map undirected edge → half-edge

Implement safe topology ops in geom/ops.ts:

edgeFlip (interior edges only; guards degeneracy)

edgeSplit (insert midpoint, retessellate adjacent faces)

recomputeNormals after edits

Keep an editable CPU mesh; after ops, rebuild half-edge, normals, lines, colors, and re-upload GPU buffers

UI: add Edge Flip / Edge Split buttons + selected-edge status label

Expose helpers in halfedge.ts (e.g., approxValences) and import where used

Ensure picking target resizes with canvas; maintain TRIANGLES/LINES + heatmap toggles

Verify

Load an OBJ → click an edge → sidebar shows Selected edge #k (va–vb)

Edge Flip on interior edge → local retriangulation visible (wireframe helps)

Edge Split → new midpoint vertex and two child triangles per adjacent face

Toggle Wireframe and Valence heatmap to inspect changes

Resize window → rendering and picking remain correct

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <h3>View</h3>
         <label><input type="checkbox" id="wire" /> Wireframe (lines)</label>
         <label><input type="checkbox" id="valence" /> Valence heatmap (per-vertex color)</label>
+        <h3>Edit</h3>
+        <button id="edgeFlip">Edge Flip</button>
+        <button id="edgeSplit">Edge Split</button>
+        <small id="selInfo">No edge selected</small>
       </aside>
       <canvas id="gl"></canvas>
     </div>
