feat(ifc): Milestone 5 — core IFC ingest + robust mesh normalization + debug tools
Add IFC loader (web-ifc WASM, no Three.js); sidebar shows {GlobalId, Name, Type, Triangles}

Normalize indices: handle polygon runs with -1 sentinels → fan-triangulated triangles

Sanitize triangles: drop OOB/degenerate faces before topology/shading

Recenter & uniformly scale positions to camera-friendly bounds

Recompute smooth per-vertex normals on CPU for reliable Lambert shading

Reuse existing pipeline: upload mesh → build unique wireframe lines → compute valence heatmap

Add safety instrumentation:

Canvas size logger; per-frame gl.getError() checks

D key toggles a known-good spinning cube (pipeline sanity check)

Mesh stats logging (verts, tris, idxMax, finiteness)

Graceful fallback: placeholder quad + sidebar note when no usable triangles

Keep WASM memory tidy by closing previous IFC models

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <button id="edgeFlip">Edge Flip</button>
         <button id="edgeSplit">Edge Split</button>
         <small id="selInfo">No edge selected</small>
+        <h3>IFC</h3>
+        <div class="row"><input type="file" id="ifcFile" accept=".ifc" /></div>
+        <div class="row"><pre id="ifcProps">Select an IFC to load…</pre></div>
       </aside>
       <canvas id="gl"></canvas>
     </div>
